# legimi-gui

./: CMakeLists.txt  README.md
src/: main.cpp
